add components, functionality, styles and propTypes

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
  },
  "plugins": ["jest", "jsx-a11y"],
  "rules": {
-  "react/no-array-index-key": 0,
+  "react/prop-types": 1,
   "react/react-in-jsx-scope": 0,
   "react/jsx-props-no-spreading": 0,
   "react/jsx-one-expression-per-line": 0,
