--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "^7.21.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "eslint": "6.6.0",
-    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "sass-rem": "^2.0.1"
+    "sass": "1.3.0",
+    "sass-rem": "^2.0.1",
+    "typescript": "3.2.1",
+    "webpack": "4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,19 +44,22 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.0.0",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
+    "eslint": "6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-flowtype": "3.x",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react-hooks": "1.x",
+    "fibers": "^5.0.0",
     "husky": "^4.2.5",
+    "node-sass": "^4.14.1",
     "postcss": "^7.0.32",
     "sass-lint": "^1.13.1"
   }
