--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^7.21.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "elliptic": "6.5.4",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "sass": "1.3.0",
-    "sass-rem": "^2.0.1",
-    "serialize-javascript": "^3.1.0",
-    "typescript": "3.2.1",
-    "webpack": "4.42.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "sass": "1.34.1",
+    "sass-rem": "^3.0.0",
+    "serialize-javascript": "^5.0.1",
+    "typescript": "4.3.2",
+    "webpack": "^4.44.2",
     "websocket-extensions": "0.1.4"
   },
   "scripts": {
@@ -45,10 +45,10 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "fibers": "^5.0.0",
-    "node-sass": "^4.14.1",
-    "postcss": "^8.2.10"
+    "node-sass": "^6.0.0",
+    "postcss": "^8.3.2"
   }
 }
